# OOP

./: CMakeLists.txt  input.txt  lab0b  main.cpp  output.csv  test.cpp
BitArray/: BitArray.cpp  BitArray.h  CMakeLists.txt
